--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,12 @@
         android:theme="@style/Theme.Facebook"
         tools:targetApi="31">
         <activity
+            android:name=".MainActivity2"
+            android:exported="false" />
+        <activity
+            android:name=".Signup"
+            android:exported="true"></activity>
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
